fix: scrollbar

--- a/src/scss/abstract/mixins/_scroll.scss
+++ b/src/scss/abstract/mixins/_scroll.scss
@@ -2,7 +2,7 @@
 @use '../../abstract/variables/common' as *;
 @mixin scroll {
   &::-webkit-scrollbar {
-    opacity: 0.7;
+    opacity: 0.5;
     width: pxToRem(8);
     height: pxToRem(8);
   }
@@ -14,12 +14,18 @@
 
   &::-webkit-scrollbar-thumb {
     border-radius: pxToRem(4);
-    background: hsl(var(--aw-color-tertiary));
+    background-color: transparent;
   }
 
   &::-webkit-scrollbar-corner {
-    background: hsl(var(--aw-color-tertiary));
+    background-color: transparent;
     border-radius: pxToRem(6);
+  }
+
+  &:hover {
+    &::-webkit-scrollbar-thumb, &::-webkit-scrollbar-corner {
+      background-color: hsl(var(--aw-color-border));
+    }
   }
 }
 
